--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,8 @@ PG_USER="your postgresql username"
 PG_PASSWORD="your postgresql password"
 PG_HOST="your hostname"
 PG_PORT="your postgresql port"
+
+EMAIL_HOST=""
+EMAIL_HOST_USER=""
+EMAIL_HOST_PASSWORD=""
+EMAIL_PORT=""
